project('dsa', 'cpp')
incdir = [
  include_directories('./src/utils'),
  include_directories('./src/problems/array/easy'),
  include_directories('./src/problems/binary_search'),
  include_directories('./src/algorithms/search')
]
src = [
'./src/main.cpp', 
'./src/utils/input.cpp',
'./src/utils/output.cpp',
'./src/problems/array/easy/remove_duplicates.cpp',
'./src/problems/array/easy/left_rotate_array.cpp',
'./src/algorithms/search/bsearch.cpp',
'./src/problems/binary_search/oned_array.cpp'
]

executable('dsa', src, include_directories: incdir)
