project('dsa', 'cpp')
incdir = [
  include_directories('./src/utils'),
  include_directories('./src/problems/array/easy'),
  include_directories('./src/problems/binary_search/one_d_array'),
  include_directories('./src/algorithms/search')
]
src = [
'./src/main.cpp', 
'./src/utils/input.cpp',
'./src/utils/output.cpp',
'./src/problems/array/easy/remove_duplicates.cpp',
'./src/problems/array/easy/left_rotate_array.cpp',
'./src/algorithms/search/bsearch.cpp',
'./src/problems/binary_search/one_d_array/lower_bound.cpp',
'./src/problems/binary_search/one_d_array/upper_bound.cpp',
'./src/problems/binary_search/one_d_array/search_insert_position.cpp',
'./src/problems/binary_search/one_d_array/floor_and_ceil.cpp',
'./src/problems/binary_search/one_d_array/last_occurance.cpp',
'./src/problems/binary_search/one_d_array/first_occurance.cpp',
'./src/problems/binary_search/one_d_array/search_in_rotated.cpp',
'./src/problems/binary_search/one_d_array/minimum_in_rotated_array.cpp',
'./src/problems/binary_search/one_d_array/number_of_rotation.cpp',
'./src/problems/binary_search/one_d_array/single_element_in_sorted_array.cpp'
]

executable('dsa', src, include_directories: incdir)
